# VGS

./: .gitignore  README.md  TODO_list.md  TODO_list_extend.md  pyproject.toml
configs/: default.yaml
notes/: baseline_positioning.md  case_studies.md  claim_evidence_table.md  cross_model_choice.md  cross_model_replication.md  current_experiment_summary.md  experiment_log.md  external_benchmark_choice.md  final_paper_framing_decision.md  findings.md  hidden_readout_protocol.md  implementation_notes.md  naming_decision.md  phase3_cross_arch_experiment_design.md  prompt_templates.md  protocol_lock.md  readout_position_decision.md  representation_editing_prep.md  rescue_failure_analysis.md  semantic_interpretation_conclusion.md  statistical_testing_protocol.md
scripts/: analyze_k_sensitivity.py  analyze_spectrum.py  analyze_stage_b_geometry.py  analyze_stage_c_coordinate_control.py  analyze_stage_c_deep.py  analyze_stage_c_supervised.py  analyze_stage_e_results.py  analyze_stage_j_controls.py  analyze_stage_k_positions.py  analyze_stage_l_evidence_subspace.py  analyze_stage_m_local_rescue.py  analyze_stage_m_rescue_failures.py  analyze_stage_n_external_transfer.py  analyze_stage_p_stats.py  build_difference_matrix.py  build_representation_editing_prep.py  build_stage_m_memory_bank.py  build_stage_o_cross_model_summary.py  build_stage_o_margin_baseline.py  build_stage_q_paper_assets.py  build_stage_r_case_panels.py  build_stage_r_semantic_fingerprints.py  build_stage_s_baselines.py  chair_sanity_check.py  compare_features.py  create_smoke_artifacts.py  dump_pope_margins.py  (+50 more)
(+27 files in other folders)
